--- a/gradle.properties
+++ b/gradle.properties
@@ -9,4 +9,6 @@ org.gradle.configuration-cache=true
 kotlin.code.style=official
 kotlinxImmutableVersion=0.3.8
 springWebVersion=6.2.6
+springBootVersion=3.2.6
+springDependencyManagementVersion="1.1.4"
 
